[B]Version 5.0.11 - 2018-02-05[/B]
- Fixing encrypted streams - Thanks to @krogsbell on the kodi forums.
- Moving "ownership" of the addon, hence Tommy have stopped developing on the addon.

[B]Version 5.0.10 - 2017-11-01[/B]
- Rollback to DR API v1.2

[B]Version 5.0.9 - 2017-10-31[/B]
- Fix https streams from DR
- Fix subtitles
- Step DR API to v1.4

[B]Version 5.0.8 - 2014-12-04[/B]
- Added themes / repremieres as seen on dr.dk/tv

[B]Version 5.0.7 - 2014-10-29[/B]
- Added description to video clips
- Fixed problem when searching for text with special characters

[B]Version 5.0.6 - 2014-10-05[/B]
- Gracefully handle error when video clip is no longer available for playback

[B]Version 5.0.5 - 2014-10-02[/B]
- Changed cache period of latest programs to five minutes (instead of a full day)

[B]Version 5.0.4 - 2014-09-16[/B]
- Fixed favorite program series
- Added "Clear favorite program series" in the settings to fix broken favorites list
- Re-added latest programs

[B]Version 5.0.3 - 2014-09-02[/B]
- Added 'Show area chooser' to context menu
- Fixed problem with recently watched when the slug no longer exists on the server

[B]Version 5.0.2 - 2014-07-29[/B]
- Added optional area chooser
  Set default area in addon settings

[B]Version 5.0.1 - 2014-06-02[/B]
- Fixed problem parsing certain dates

[B]Version 5.0.0 - 2014-05-31[/B]
- Yet another rewrite; this time to DR MU-online API
  http://www.dr.dk/mu-online/Help
- Added Live TV
- Added caching

[B]Version 4.0.3 - 2013-10-21[/B]
- Added 'Latest on TV' category

[B]Version 4.0.2 - 2013-10-02[/B]
- Fixed problem with favourites only remembering the last favourite added
- Improve error handling when stream is not available

[B]Version 4.0.1 - 2013-09-24[/B]
- List up to 500 videos for each program series (instead of just 20)
- Re-added Premieres, Highlights and Spots categories
- Fixed problem with empty favourites
- Added support for displaying subtitles

[B]Version 4.0.0 - 2013-09-23[/B]