@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.drnu" version="5.0.11" name="DR TV" provider-name="msj33">
+<addon id="plugin.video.drnu" version="5.0.12" name="DR TV" provider-name="msj33">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
@@ -19,7 +19,7 @@
         <platform>all</platform>
         <language>da</language>
         <email>msj33@hotmail.com</email>
-        <website></website>
+        <website>https://github.com/xbmc-danish-addons/plugin.video.drnu</website>
         <forum>https://forum.kodi.tv/</forum>
         <source>https://github.com/xbmc-danish-addons/plugin.video.drnu</source>
     </extension>
