@@ -1,3 +1,5 @@
+#  Copyright (C) 2014 msj33
+#  https://github.com/xbmc-danish-addons/plugin.video.drnu
 #
 #  This Program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
