@@ -1,3 +1,6 @@
+﻿[B]Version 5.0.12 - 2018-02-05[/B]
+- Updated copyright(readded) + added new strings.po language format for EN/DA translations.
+
 [B]Version 5.0.11 - 2018-02-05[/B]
 - Fixing encrypted streams - Thanks to @krogsbell on the kodi forums.
 - Moving "ownership" of the addon, hence Tommy have stopped developing on the addon.
